# mrs_robot_diagnostics

./: CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml
config/: state_monitor_config.yaml
include/mrs_robot_diagnostics/: parsing_functions.h  sensor_handler.h
include/mrs_robot_diagnostics/enums/: enum_helpers.h  enum_macros.h  robot_type.h  tracker_state.h  uav_state.h
include/mrs_robot_diagnostics/sensor_plugins/: camera_handler.h
launch/: state_monitor.launch  state_monitor.launch.py
msg/: BatteryState.msg  CollisionAvoidanceInfo.msg  ControlInfo.msg  GeneralRobotInfo.msg  NodeCpuLoad.msg  SensorInfo.msg  SensorStatus.msg  StateEstimationInfo.msg  SystemHealthInfo.msg  UavInfo.msg  UavState.msg
src/: state_monitor.cpp
src/sensor_handler_plugins/: camera_handler.cpp
tmux/one_drone/: session.yml
tmux/one_drone/config/: custom_config.yaml
