<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_robot_diagnostics</name>
  <version>2.0.0</version>
  <description> An aggregator of states of key components from the MRS (Multi-Robot System) serves
    as a centralized monitoring system to provide real-time insights into the current status of the
    entire robotic system. </description>

  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>
  <author email="spurny@fly4future.com">Vojtech Spurny</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>pluginlib</depend>
  <depend>builtin_interfaces</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
